Fixed react-datepicker z-index

--- a/src/assets/Styles.scss
+++ b/src/assets/Styles.scss
@@ -162,7 +162,7 @@ hr {
   }
 }
 .date-picker-container {
-  z-index: 20;
+  z-index: 30;
 
   button.open-picker {
     margin: 0 10px;
